# pixely-tauri

./: .hintrc  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
src/: App.tsx  app.module.css  enums.tsx  global.css  main.tsx  root.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: consts.rs  main.rs  statics.rs
src-tauri/src/bridger/: impls.rs  mod.rs  models.rs
src-tauri/src/bridger/impls/: async.rs  dispatch.rs  get.rs  instant.rs
src-tauri/src/rasterizer/: mod.rs
src-tauri/src/rasterizer/impls/: completer.rs  core.rs  downloader.rs  installer.rs  mod.rs  parser.rs
src-tauri/src/rasterizer/impls/core/: locator.rs
src-tauri/src/rasterizer/impls/core/locator/: json_parser.rs
src-tauri/src/rasterizer/impls/parser/: json_parser.rs  resource_parser.rs
src-tauri/src/rasterizer/models/: completer.rs  core.rs  downloader.rs  installer.rs  mod.rs  parser.rs
src-tauri/src/rasterizer/models/core/: locator.rs  minecraft_instance.rs
src-tauri/src/rasterizer/models/core/locator/: json_parser.rs
src-tauri/src/rasterizer/models/parser/: asset_parser.rs  assets_parser.rs  json_parser.rs  resource_parser.rs
src-tauri/src/rasterizer/utils/: crossplat.rs  http_handler.rs  json_parser.rs  mod.rs
src/assets/localization/: zh-cn.json
src/bridger/: bridger.ts  interface.ts  invoker.ts  notif.ts  parser.ts  return.ts
src/components/: menu.module.css  titlebar.module.css  titlebar.tsx
src/components/App/: bootstrapper.tsx  index.tsx
src/components/App/ActionCenter/: ActionCenter.module.css  adapter.ts  index.tsx
src/components/App/TitleBar/: TitleBar.module.css  adapter.ts  index.tsx
src/components/App/contextWrapper/: global.ts  page_stack.ts
src/components/apps/: launcher.module.css  launcher.tsx  settings.tsx
src/components/hocs/: context.tsx  page.tsx  scrollbox.module.css  scrollbox.tsx  transition.tsx
src/components/hocs/ScrollBox/: ScrollBox.module.css  index.tsx
src/components/hocs/state/: context.tsx
src/components/modals/: actioncenter.module.css  actioncenter.tsx  controls.tsx  notification.module.css  notification.tsx  sidebar.module.css  sidebar.tsx
src/components/models/: menu.module.css  menu.tsx  sidebar.tsx
src/components/pages/: pages.tsx
src/components/pages/Launcher/: index.tsx
src/components/pages/Playground/: index.tsx
src/components/pages/Plaza/: consts.ts  index.tsx
src/components/pages/Settings/: consts.tsx  index.tsx
src/components/pages/launcher/: launcher.module.css  launcher.tsx
src/components/pages/playground/: playground.tsx
src/components/pages/plaza/: plaza.module.css  plaza.tsx
src/components/pages/settings/: settings.module.css  settings.tsx
src/components/routes/_root/: Root.tsx  rootContext.ts
src/components/routes/launcher/: Launcher.tsx  routes.tsx
src/components/shared/: button.module.css  button.tsx  icons.tsx  image.tsx
src/components/ui/: animation.ts
src/components/utils/: AnimatedOutlet.tsx
src/consts/: pages.ts
src/i18n/: i18n.ts
src/i18n/lang/: en-US.json  zh-CN.json
src/types/: consts.ts  instance.ts  notif.ts  system.ts  task.ts  ui.ts
src/utils/: date.ts
(+75 files in other folders)
