[package]
name = "pixely-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
keyring = "2"
toml = "0.8.6"
async-trait = "0.1.74"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
lazy_static = "1.4.0"
regex = "1.10.2"
bytes = "1.5.0"
error-chain = "0.12.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "dev" }
tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "dev" }
